# documentation

./: .gitignore  .gitmodules  .travis.yml  404.html  CNAME  Makefile  README.md  bills.rst  committees.rst  conf.py  districts.rst  events.rst  index.html  index.rst  legislators.rst  metadata.rst  mkdocs.yml  oldindex.rst  pyproject.toml  sitemap.xml  usage.rst
.github/workflows/: lint.yml  main.yml
api/: bills.rst  categorization.rst  committees.rst  districts.rst  events.rst  index.rst  legislators.rst  metadata.rst
api-v2/: index.html
api-v2/changelog/: index.html
api-v2/examples/: index.html
api-v2/other/: index.html
api-v2/root-nodes/: index.html
api-v2/types/: index.html
api-v3/: index.html
api-v3/changelog/: index.html
api/v2/: changelog.rst  (+7 more)
bulk/: boundaries.rst  index.rst  legacy-json.rst  people.rst
code-of-conduct/: index.html
contributing/: code-of-conduct.rst  communication.rst  documentation.rst  getting-started.rst  index.html  index.rst  overview.rst  people.rst  pupa-conversion-2.rst  pupa-conversion.rst  repositories.rst  roadmap.rst  running-the-site.rst  scrapers.rst  state-api-keys.rst  state-specific.rst  testing-scrapers.rst  text-extraction.rst  writing-scrapers.rst
data/: categorization.rst  concepts.rst  index.html  index.rst  people.rst
docs/: code-of-conduct.md  communication.md  index.md
downloads/: index.rst  legacy-csv.rst
enhancement-proposals/: index.html
infrastructure/: index.rst
policies/: categorization.rst  index.rst  session-naming.rst  state-api-keys.rst  testing.rst
search/: search_index.json
(+48 files in other folders)
